--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     http://maven.apache.org/xsd/maven-4.0.0.xsd">
  
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.github.gaojizhou</groupId>
+    <groupId>io.github.gaojizhou</groupId>
     <artifactId>MybatisTypeHandler</artifactId>
     <version>0.0.1</version>
     <build>
